--- a/.github/workflows/main_billsplit.yml
+++ b/.github/workflows/main_billsplit.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - BillSplit
 
 on:
@@ -23,11 +20,10 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install deps and build SvelteKit app
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm ci
+          npm run build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -62,4 +58,3 @@ jobs:
           app-name: 'BillSplit'
           slot-name: 'Production'
           package: .
-          
